--- a/app/src/main/res/layout/aqi.xml
+++ b/app/src/main/res/layout/aqi.xml
@@ -67,7 +67,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="PM2.5指数"
-                    android:textSize="40sp"/>
+                    android:textColor="#fff"/>
 
             </LinearLayout>
         </RelativeLayout>
